--- a/app/views/messages/_messages.html.erb
+++ b/app/views/messages/_messages.html.erb
@@ -7,10 +7,13 @@
       <%if message.content? && message.documents.attached?%>
         <%=render partial: 'documents',locals: {documents: @documents,message: message} %>
         <%=render partial: 'content',locals: {message: message} %>
+        <%=render partial: 'messageTime',locals: {message: message} %>
       <%elsif message.content?%>
         <%=render partial: 'content',locals: {message: message} %>
+        <%=render partial: 'messageTime',locals: {message: message} %>
       <% elsif message.documents.attached?%>
         <%=render partial: 'documents',locals: {documents: @documents,message: message} %>
+        <%=render partial: 'messageTime',locals: {message: message} %>
       <% end %>
     </div>
   <%end%>
