added styles to notification feature

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -142,6 +142,9 @@ body {
           list-style-type: none;
         }
       }
+      .notifications__dropdown {
+        @extend .conversations__dropdown;
+      }
 
       & > li:nth-last-child(1) {
         position: relative;
