--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -12,6 +12,9 @@
   transition: all 0.3s;
   overflow: scroll;
   scrollbar-width: none;
+  &::-webkit-scrollbar {
+    width: 0;
+  }
 
   .message {
     display: flex;
