--- a/app/assets/stylesheets/notifications.scss
+++ b/app/assets/stylesheets/notifications.scss
@@ -1,3 +1,91 @@
 // Place all the styles related to the notifications controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.notifications__modal {
+  display: block;
+  width: 350px;
+  height: 350px;
+  position: absolute;
+  right: 50%;
+  transform: translate(50%, 15px);
+  z-index: 10;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px 8px rgba(0, 0, 0, 0.07),
+    0 8px 16px rgba(0, 0, 0, 0.07), 0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07);
+  right: 0;
+  overflow: scroll;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    width: 0;
+  }
+  .notification {
+    display: flex;
+    color: rgb(0, 0, 0);
+    border-radius: 3px;
+    border-bottom: 1px solid #c8c6c6;
+    font-size: 14px;
+    transition: all 0.5s;
+    gap: 1rem;
+    width: 100%;
+
+    &:hover {
+      background: rgb(226, 226, 226);
+      cursor: pointer;
+      border-bottom: 1px solid #a8a6a6;
+    }
+    .user__image {
+      flex-basis: 35px;
+      padding: 5px;
+      align-self: center;
+      svg {
+        display: block;
+        height: 60px;
+        width: 60px;
+      }
+    }
+    .notification__content {
+      padding: 5px 15px 5px 0;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      .notification__from {
+        flex: 1;
+        word-break: break-word;
+        line-height: 20px;
+        font-size: 13px;
+      }
+      .bid__status {
+        flex: 1;
+        display: flex;
+        justify-content: flex-start;
+        gap: 1rem;
+        font-size: 13px;
+        .btn-primary {
+          display: block;
+          background: #5694c0;
+          text-align: center;
+          font-weight: 500;
+          font-size: 14px;
+          width: 100px;
+          transition: all 0.6s;
+          &:hover {
+            background: #0a87e0;
+            color: white;
+            cursor: default;
+          }
+        }
+      }
+      .bid__result {
+        align-self: flex-end;
+        font-size: 13px;
+      }
+      .time {
+        font-weight: 400;
+        font-size: 0.7rem;
+        color: #242424;
+        flex: 1;
+      }
+    }
+  }
+}
