--- a/app/views/messages/_messageTime.html.erb
+++ b/app/views/messages/_messageTime.html.erb
@@ -1,5 +1,5 @@
 <div class="<%=message.user == current_user ? "created__at-current-user" : "created__at"%>">
-  <%= message.created_at.strftime("%d/%m/%y at %l:%M %p")%>
+  <%= distance_of_time_in_words_to_now(message.created_at)%> ago
   <%if message.user==current_user%>
     <span>
       <%if message.read %>
