--- a/app/views/messages/index.js.erb
+++ b/app/views/messages/index.js.erb
@@ -14,9 +14,9 @@ document.querySelector(".close__messages").addEventListener("click", () => {
     clearTimeout(t);
   }, 200);
 });
+document
+  .querySelector(".messages__modal")
+  .lastElementChild.scrollIntoView({ behaviour: "smooth", block: "end" });
 document.querySelector("#message_documents").addEventListener("change", (e) => {
   e.target.previousElementSibling.classList.add("attached");
 });
-document
-  .querySelector(".messages__modal")
-  .scrollTo(0, document.querySelector(".messages__modal").scrollHeight);
