--- a/app/views/projects/details/_shortlisted.html.erb
+++ b/app/views/projects/details/_shortlisted.html.erb
@@ -1,16 +1,38 @@
-<%shortlisted.each do|bid|%>
-  <div class="shortlisted__user">
-    <%=bid.freelancer.name%>
-    <%unless bid.awarded?%>
-      <%= link_to "award project", award_project_bid_path(bid.project,bid),method: :put %>
-      <% if Conversation.between(bid.project.client.id,bid.freelancer.id ).present?%>
-        <%=link_to ' Message',conversation_messages_path(Conversation.between(bid.project.client.id,bid.freelancer.id).first)%>
-      <% else %>
-        <%=link_to 'Message',conversations_path(sender_id:bid.project.client.id,
+<ul class="shortlisted__users">
+  <%shortlisted.each do|bid|%>
+    <li class="proposal">
+      <div class="user__image"><%=inline_svg_tag 'default_avatar.svg' %></div>
+      <ul>
+        <li>
+          <%=bid.freelancer.name%>
+          <%if bid.awarded?%>
+            <i class="fal fa-crown"></i>
+          <% end %>
+        </li>
+        <li>
+          <span>$<%=bid.value%>/hr</span>
+        </li>
+        <li>
+          <span>Proposal: </span>
+          <%=bid.proposal.from(0).to(250)%>
+        </li>
+        <li class="time">
+          <%=distance_of_time_in_words_to_now(bid.updated_at)%>
+        </li>
+      </ul>
+      <div class="bid__status">
+        <%unless bid.awarded? || project_awarded?%>
+          <%= link_to "award project", award_project_bid_path(bid.project,bid),method: :put %>
+          <% if Conversation.between(bid.project.client.id,bid.freelancer.id ).present?%>
+            <%=link_to ' Message',conversation_messages_path(Conversation.between(bid.project.client.id,bid.freelancer.id).first)%>
+          <% else %>
+            <%=link_to 'Message',conversations_path(sender_id:bid.project.client.id,
           recipient_id:bid.freelancer.id ),method: :post%>
-      <% end %>
-    <%else%>
-      <small>was awarded with project</small>
-    <%end%>
-  </div>
-<%end%>
+          <% end %>
+        <%else%>
+          <span class="stamp is-<%=bid.aasm_state%>"><%=bid.aasm_state%></span>
+        <%end%>
+      </div>
+    </li >
+  <%end%>
+</ul>
