--- a/app/assets/stylesheets/notifications.scss
+++ b/app/assets/stylesheets/notifications.scss
@@ -30,7 +30,7 @@
     width: 100%;
 
     &:hover {
-      background: rgb(226, 226, 226);
+      background: #dde9cd;
       cursor: pointer;
       border-bottom: 1px solid #a8a6a6;
     }
@@ -86,6 +86,23 @@
         color: #242424;
         flex: 1;
       }
+    }
+  }
+  .no__notifications {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: inherit;
+    opacity: 0.5;
+    font-family: "Comfortaa", cursive;
+    font-size: 1.2rem;
+    font-weight: 700;
+    gap: 1rem;
+    svg {
+      display: block;
+      height: 100px;
+      opacity: 0.5;
     }
   }
 }
