--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,8 +32,8 @@
     <nav>
       <ul>
         <%if current_user%>
-          <li>
-            <%=link_to  bid_history_projects_path do%>
+          <li class="<%=current_path(bid_history_projects_path) ? "add__border-bottom" : ""%>">
+            <%=link_to  bid_history_projects_path  do%>
               <i class="fad fa-history"></i>
             <%end%>
           </li>
