--- a/app/views/projects/details/_all_proposals.html.erb
+++ b/app/views/projects/details/_all_proposals.html.erb
@@ -1,15 +1,31 @@
-<%bids.each do|bid|%>
-  <div class="proposal">
-    <%=bid.proposal%>
-    <%=bid.value%>
-    <small>  <%=bid.freelancer.name%></small>
-    <div>
-      <%if bid.unapproved?%>
-        <%=link_to 'accept', accept_project_bid_path(bid.project,bid) ,method: :put%>
-        <%=link_to 'reject',reject_project_bid_path(bid.project,bid) ,method: :put %>
-      <%else%>
-        <small><%= bid.accepted? ? 'Accepted' : 'Rejected' %></small>
-      <%end%>
-    </div>
-  </div >
-<%end%>
+<ul class="proposals">
+  <%bids.each do|bid|%>
+    <li class="proposal" id="<%=bid.id%>">
+      <div class="user__image"><%=inline_svg_tag 'default_avatar.svg' %></div>
+      <ul>
+        <li>
+          <%=bid.freelancer.name%>
+        </li>
+        <li>
+          <span>$<%=bid.value%>/hr</span>
+        </li>
+        <li>
+          <span>Proposal: </span>
+          <%=bid.proposal.from(0).to(250)%>
+          <%=link_to '...more',root_path %>
+        </li>
+        <li class="time">
+          <%=distance_of_time_in_words_to_now(bid.updated_at)%>
+        </li>
+      </ul>
+      <div class="bid__status">
+        <%if bid.unapproved?%>
+          <%=link_to 'accept', accept_project_bid_path(bid.project,bid) ,method: :put,remote: true%>
+          <%=link_to 'reject',reject_project_bid_path(bid.project,bid) ,method: :put ,remote: true%>
+        <%else%>
+          <span class="stamp is-<%=bid.aasm_state%>"><%=bid.aasm_state%></span>
+        <%end%>
+      </div>
+    </li >
+  <%end%>
+</ul>
