--- a/app/views/projects/details/review_proposals.js.erb
+++ b/app/views/projects/details/review_proposals.js.erb
@@ -1,12 +1,13 @@
-if(document.querySelector(".project__post"))
+if (document.querySelector(".project__post"))
 document.querySelector(".project__post").remove();
-if(document.querySelector(".proposals"))
-<%request.referrer%>;
-else{
+if (document.querySelector(".review__proposals")) {
+document.querySelector(".review__proposals").remove();
+}
 document
-.querySelector(".review__proposals")
+.querySelector(".project__overview")
 .insertAdjacentHTML(
-"afterbegin",
+"afterend",
 `<%=j render 'review_proposals', {bids: @bids,shortlisted: @shortlisted,rejected: @rejected}%>`
 );
-}
+document.querySelector(".proposals-tab").firstElementChild.firstElementChild.
+click();
