--- a/app/views/projects/details/shortlisted.js.erb
+++ b/app/views/projects/details/shortlisted.js.erb
@@ -1,15 +1,20 @@
-if(document.querySelector(".rejected__user"))
-document.querySelector(".rejected__user").remove();
-if(document.querySelector(".proposal"))
-document.querySelector(".proposal").remove();
-if(document.querySelector(".shortlisted__user"))
+if(document.querySelector(".rejected__users"))
+document.querySelector(".rejected__users").remove();
+if(document.querySelector(".proposals"))
+document.querySelector(".proposals").remove();
+if(document.querySelector(".shortlisted__users"))
 {
-document.querySelector(".shortlisted__user").remove();
-<%request.referrer%>;
+document.querySelector(".shortlisted__users").remove();
 }
+currentTab = document.querySelector(".shortlisted__users-tab");
+[...document.querySelector(".proposals-tab").children].forEach((element) => {
+if (element.classList[1] == "add__border-bottom" && element !== currentTab)
+element.classList.remove("add__border-bottom");
+});
+currentTab.classList.add("add__border-bottom");
 document
-.querySelector(".shortlisted__users")
+.querySelector(".review__proposals")
 .insertAdjacentHTML(
-"afterbegin",
+"beforeend",
 `<%=j render 'shortlisted', shortlisted: @shortlisted  %>`
 );
