added freelancer feed to see all the projects related to his field of work

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@
 body {
   overflow-x: hidden;
   scrollbar-width: none;
+  background-color: #f1f2f4;
   header {
     position: absolute;
     top: 0;
