--- a/app/views/profiles/_details.html.erb
+++ b/app/views/profiles/_details.html.erb
@@ -1,3 +1,8 @@
 <li class="user__details">
-  details
+  <div class="user__name">
+  </div>
+  <div class="user__name">
+  </div>
+  <div class="joined_on">
+  </div>
 </li>
