--- a/app/assets/stylesheets/dropdowns.scss
+++ b/app/assets/stylesheets/dropdowns.scss
@@ -1,6 +1,7 @@
 // Place all the styles related to the dropdowns controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+$font: "Comfortaa", cursive;
 .user__profile-dropdown {
   display: block;
   width: 300px;
@@ -35,30 +36,28 @@
         flex-basis: 35px;
       }
     }
-    .user__name {
-      flex: 1;
-      font-weight: 600;
-      font-family: "Quicksand", sans-serif;
 
-      span {
-        display: block;
-        font-weight: 400;
-      }
-    }
     .user__setting {
       width: 15px;
       height: 15px;
       flex-basis: 35px;
     }
     .setting__field,
-    .logout__field {
+    .logout__field,
+    .user__name {
       flex: 1;
-      font-weight: 500;
+      font-weight: 700;
       font-size: 0.9rem;
-      font-family: "Quicksand", sans-serif;
+      font-family: $font;
+    }
+    .user__name {
+      span {
+        display: block;
+        font-weight: 400;
+      }
     }
     &:hover {
-      background: rgb(236, 233, 233);
+      background: rgb(233, 232, 232);
       cursor: pointer;
     }
     & i {
