--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -26,6 +26,19 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
     transform: translateX(0%);
   }
 }
+@mixin tabSlider {
+  &::after {
+    content: "";
+    position: absolute;
+    background: green;
+    width: 30%;
+    height: 3px;
+    bottom: 0;
+    left: 100%;
+    transform: translateX(-100%);
+    transition: all 0.5s;
+  }
+}
 
 .profile__card {
   padding: 0;
@@ -98,9 +111,10 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
       border-right: none;
       border-top: none;
       align-items: flex-end;
-      gap: 1rem;
+      gap: 3rem;
       height: 40px;
       position: relative;
+      justify-content: center;
       & > li {
         padding: 0.5rem 1rem;
         font-family: $font;
@@ -114,6 +128,28 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
         }
       }
     }
+    .tab__slider-0 {
+      @include tabSlider();
+      &::after {
+        transform: translateX(0%);
+        left: 0%;
+      }
+    }
+    .tab__slider-1 {
+      @include tabSlider();
+      &::after {
+        transform: translateX(-50%);
+        left: 50%;
+      }
+    }
+    .tab__slider-2 {
+      @include tabSlider();
+      &::after {
+        transform: translateX(-100%);
+        left: 100%;
+      }
+    }
+
     .add__border-bottom {
       position: relative;
       &::after {
@@ -144,7 +180,8 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
     .user__experience,
     .user__details {
       flex-basis: 210px;
-      overflow: hidden;
+      overflow: scroll;
+      scrollbar-width: none;
       font-size: 0.8rem;
       line-height: 18px;
       word-spacing: 2px;
@@ -179,17 +216,22 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
       font-family: $font;
       font-size: 2rem;
       flex: 1;
-      position: relative;
-      &::after {
-        content: "";
-        position: absolute;
-        width: 55px;
-        height: 55px;
-        border: 2px solid #37a000;
-        top: -12px;
-        transform: translateX(-50%);
-        border-radius: 50%;
+
+      div {
+        position: relative;
+        &::after {
+          content: "";
+          position: absolute;
+          width: 55px;
+          height: 55px;
+          border: 2px solid #37a000;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          border-radius: 50%;
+        }
       }
+
       span {
         display: block;
         padding: 15px 0 0;
