--- a/app/views/freelancer_infos/index.html.erb
+++ b/app/views/freelancer_infos/index.html.erb
@@ -1,1 +1,34 @@
-<%=render partial: 'projects/allprojects', locals:{ projects: @projects } %>
+<main class="freelancer__feed">
+  <h2>My Feed</h2>
+  <ul class="projects">
+    <%@projects.each do|project|%>
+      <li class="project">
+        <ul>
+          <li class="project__title">
+            <%= link_to project.title, project_path(project),remote: true%>
+            <div class="category">
+              <span><%=project.category%></span><span><%=project.subcategory%></span>
+            </div>
+          </li>
+          <li class="project__experience">
+            Experience: <%=project.experience%>
+          </li>
+          <li class="project__description">
+            <% if project.description.length >240 %>
+              <%=project.description.from(0).to(220)%><b>....</b>
+            <% else %>
+              <%=project.description%>
+            <% end %>
+          </li>
+          <li class="total__bids-on-project">
+            Total bids: <%=project.bids.count%>
+          </li>
+          <li class="project__posted-at">
+            Posted-<%=distance_of_time_in_words_to_now(project.created_at)%>
+          </li>
+        </ul>
+        <%=link_to '', project_path(project),remote: true%>
+      </li>
+    <%end%>
+  </ul>
+</main>
