--- a/app/views/profiles/_experience.html.erb
+++ b/app/views/profiles/_experience.html.erb
@@ -1,6 +1,6 @@
 <li class="user__experience">
   <div class="no__experience">
     <%=inline_svg_tag 'project.svg'%>
-    you have no experience
+    Start bidding on projects
   </div>
 </li>
