--- a/app/views/projects/show.js.erb
+++ b/app/views/projects/show.js.erb
@@ -1,23 +1,26 @@
 document
-.querySelector("nav")
-.insertAdjacentHTML(
-"afterend",
-`<%= j render partial: "project__modal",locals: {project: @project,bid: @bid ,bids: @bids} %>`
-);
+  .querySelector("nav")
+  .insertAdjacentHTML(
+    "afterend",
+    `<%= j render partial: "project__modal",locals: {project: @project,bid: @bid ,bids: @bids} %>`
+  );
+project__modal = document.querySelector(".project__modal");
+
+project__modal.setAttribute("style", `top:${window.scrollY}px`);
 setTimeout(function () {
-document
-.querySelector(".project__modal")
-.classList.add("show__project-slideIn");
+  project__modal.classList.add("show__project-slideIn");
+  document.querySelector("body").setAttribute("style", "overflow:hidden");
 }, 100);
 document.querySelector(".close__modal")?.addEventListener("click", function () {
-document
-.querySelector(".project__modal")
-.classList.remove("show__project-slideIn");
-document
-.querySelector(".freelancer__feed")
-?.setAttribute("style", "transform:translateX(0%)");
-document.querySelector(".freelancer__feed")?.classList.remove("disable-click");
-setTimeout(function () {
-document.querySelector(".project__modal").remove();
-}, 300);
+  project__modal.classList.remove("show__project-slideIn");
+  document
+    .querySelector(".freelancer__feed")
+    ?.setAttribute("style", "transform:translateX(0%)");
+  document
+    .querySelector(".freelancer__feed")
+    ?.classList.remove("disable-click");
+  document.querySelector("body").setAttribute("style", "overflow-x:hidden");
+  setTimeout(function () {
+    project__modal.remove();
+  }, 300);
 });
