--- a/app/views/pages/_searchFieldProject.html.erb
+++ b/app/views/pages/_searchFieldProject.html.erb
@@ -1,2 +1,2 @@
 <%= f.label :description_cont,style:'display:none' %>
-<%= f.search_field :description_cont, placeholder: "Search", class: "form-control" %>
+<%= f.search_field :description_cont, placeholder: "search projects", class: "form-control" %>
