--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -2,6 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 $border-color: rgb(214, 210, 210);
+$font: "Comfortaa", cursive;
+$box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px 8px rgba(0, 0, 0, 0.07),
+  0 8px 16px rgba(0, 0, 0, 0.07), 0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07);
 
 .hero {
   &::before {
@@ -104,11 +107,12 @@ $border-color: rgb(214, 210, 210);
 }
 
 /******search-bar**/
-.search__projects {
+.search__projects,
+.search__freelancers {
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  transition: transform 0.6s;
   padding-top: 2rem;
   .search__wrapper {
     padding: 1rem 2rem;
@@ -168,7 +172,74 @@ $border-color: rgb(214, 210, 210);
 
     @import "allprojects";
   }
-  .no__results {
+  .search__results-freelancers {
+    width: 650px;
+    border: 1px solid #cac4c4;
+    border-top: none;
+    .freelancers {
+      width: 100%;
+      line-height: normal;
+      border: 0px;
+      background: white;
+      & li {
+        list-style-type: none;
+      }
+      .freelancer {
+        display: flex;
+        list-style-type: none;
+        position: relative;
+        transition: all 0.5s;
+        border-bottom: 1px solid #cac4c4;
+
+        &:hover {
+          background-color: #f0eeee;
+          cursor: pointer;
+        }
+        .user_image {
+          padding: 1rem;
+          align-self: flex-start;
+          svg {
+            display: block;
+            height: 60px;
+            width: 60px;
+          }
+        }
+        & > ul {
+          display: flex;
+          flex-direction: column;
+          padding: 0.6rem 0.5rem 0;
+          gap: 0.5rem;
+          .freelancer__name {
+            font-size: 0.95rem;
+            color: green;
+            text-transform: capitalize;
+            font-weight: 700;
+            font-family: $font;
+            .category {
+              font-weight: 400;
+              font-size: 0.8rem;
+              color: #696969;
+            }
+          }
+          .freelancer__bio {
+            flex-basis: 10px;
+            font-family: $font;
+            font-size: 0.8rem;
+            word-spacing: 2px;
+            font-weight: 600;
+            line-height: 16px;
+          }
+          .freelancer__joined-on {
+            font-weight: 400;
+            font-size: 0.7rem;
+            color: #242424;
+          }
+        }
+      }
+    }
+  }
+  .no__results,
+  .empty__search {
     height: 200px;
     width: 650px;
     border: 1px solid $border-color;
@@ -185,5 +256,25 @@ $border-color: rgb(214, 210, 210);
     i {
       font-size: 5rem;
     }
+  }
+}
+.freelancer__profile-modal {
+  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.7));
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 65px;
+  .freelancer__profile {
+    z-index: 10;
+    padding: 0;
+    height: auto;
+    width: 450px;
+    box-shadow: $box-shadow;
+    border-radius: 1rem;
+    background: white;
+    @import "profile/user-profile";
   }
 }
