--- a/app/assets/stylesheets/project/details.scss
+++ b/app/assets/stylesheets/project/details.scss
@@ -17,12 +17,14 @@ main {
   max-width: 1500px;
   position: relative;
   margin: 0 auto;
+  padding: 3rem 12rem;
 
   & > .project__overview {
     display: flex;
     list-style-type: none;
     align-items: center;
     position: relative;
+    background: white;
     & > li {
       border: 2px solid rgb(224, 220, 220);
       flex: 1;
@@ -78,8 +80,10 @@ main {
   .project__post {
     width: 100%;
     line-height: normal;
+    background: white;
   }
   .review__proposals {
+    background: white;
     .proposals-tab {
       width: 100%;
       height: 60px;
