--- a/app/views/dropdowns/freelancer.js.erb
+++ b/app/views/dropdowns/freelancer.js.erb
@@ -1,10 +1,14 @@
 set_field = (element) => {
-  element.value = "";
-  element.placeholder = "search freelancers";
-  document.querySelector(".search__dropdown").remove();
+element.value = "";
+element.placeholder = "search freelancers";
+document.querySelector(".search__dropdown").remove();
 };
-
 if (document.querySelector("#q_description_cont"))
-  set_field(document.querySelector("#q_description_cont"));
+set_field(document.querySelector("#q_description_cont"));
 if (document.querySelector("#q_name_cont"))
-  set_field(document.querySelector("#q_name_cont"));
+set_field(document.querySelector("#q_name_cont"));
+<% if current_page?("/search")%>
+  window.location.replace("/search");
+<% else%>
+  window.location.replace("<%=request.referer%>");
+<%end%>
