added styling to client-feed now client can see all the posted projects

--- a/app/assets/stylesheets/_allprojects.scss
+++ b/app/assets/stylesheets/_allprojects.scss
@@ -16,7 +16,7 @@ h2 {
 
   display: block;
   overflow: scroll;
-  height: 90vh;
+  height: 100%;
   scrollbar-width: none;
   list-style-type: none;
   transition: transform 0.7s;
