--- a/app/assets/stylesheets/dropdowns.scss
+++ b/app/assets/stylesheets/dropdowns.scss
@@ -1,6 +1,7 @@
 // Place all the styles related to the dropdowns controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+// *= require_self
 $font: "Comfortaa", cursive;
 .user__profile-dropdown {
   display: block;
