--- a/app/views/pages/_freelancer_profile.js.erb
+++ b/app/views/pages/_freelancer_profile.js.erb
@@ -2,4 +2,7 @@
   <div class="freelancer__profile">
     <%=render 'profiles/user_profile',user: freelancer%>
   </div>
+  <div class="close__profile-modal">
+    <i class="fal fa-times-circle"></i>
+  </div>
 </div>
