--- a/app/views/profiles/about.js.erb
+++ b/app/views/profiles/about.js.erb
@@ -1,17 +1,16 @@
 if (document.querySelector(".user__experience"))
-  document.querySelector(".user__experience").remove();
+document.querySelector(".user__experience").remove();
 if (document.querySelector(".user__details"))
-  document.querySelector(".user__details").remove();
+document.querySelector(".user__details").remove();
 if (document.querySelector(".user__bio"))
-  document.querySelector(".user__bio").remove();
+document.querySelector(".user__bio").remove();
 if (document.querySelector(".welcome"))
-  document.querySelector(".welcome").remove();
+document.querySelector(".welcome").remove();
 currentTab = document.querySelector(".about__me-tab");
-
 document
-  .querySelector(".user__analytics")
-  .insertAdjacentHTML("beforebegin", `<%=j render 'about-me' %>`);
+.querySelector(".user__analytics")
+.insertAdjacentHTML("beforebegin", `<%=j render 'about-me' ,user: @user%>`);
 t = setTimeout(() => {
-  document.querySelector(".user__bio").classList.add("slide__in");
-  clearTimeout(t);
+document.querySelector(".user__bio").classList.add("slide__in");
+clearTimeout(t);
 }, 100);
