--- a/app/assets/stylesheets/freelancer_infos.scss
+++ b/app/assets/stylesheets/freelancer_infos.scss
@@ -5,8 +5,11 @@ $font: "Comfortaa", cursive;
 $border-color: rgb(214, 210, 210);
 .freelancer__feed {
   max-width: 650px;
-  padding: 3rem 0 1rem;
+  padding: 1rem 0 1rem;
   transition: transform 0.6s;
+  overflow: scroll;
+  max-height: 90vh;
+  scrollbar-width: none;
   @import "allprojects";
 }
 
