--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -167,7 +167,9 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
   }
   .search__results-projects {
     max-width: 650px;
-
+    overflow: scroll;
+    max-height: 90vh;
+    scrollbar-width: none;
     transition: transform 0.7s;
 
     @import "allprojects";
@@ -222,7 +224,7 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
             }
           }
           .freelancer__bio {
-            flex-basis: 10px;
+            flex-basis: 25px;
             font-family: $font;
             font-size: 0.8rem;
             word-spacing: 2px;
@@ -259,22 +261,33 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
   }
 }
 .freelancer__profile-modal {
-  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.7));
+  background: linear-gradient(to right bottom, rgba(68, 68, 68, 0.5), rgba(92, 92, 92, 0.5));
   width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 65px;
+  top: 0;
+  z-index: 10;
   .freelancer__profile {
-    z-index: 10;
     padding: 0;
     height: auto;
+
     width: 450px;
     box-shadow: $box-shadow;
     border-radius: 1rem;
     background: white;
+
     @import "profile/user-profile";
+  }
+  .close__profile-modal {
+    position: absolute;
+    top: 2rem;
+    right: 1rem;
+    i {
+      font-size: 3rem;
+      color: white;
+    }
   }
 }
