--- a/app/assets/stylesheets/profile/_user-profile.scss
+++ b/app/assets/stylesheets/profile/_user-profile.scss
@@ -5,9 +5,15 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
   display: flex;
   align-items: center;
   flex-direction: column;
+  gap: 1rem;
+  background: white;
+  width: inherit;
   & > svg {
     width: 150px;
     height: 150px;
+  }
+  span {
+    font-size: 1rem;
   }
 }
 @mixin borderBottom {
@@ -36,7 +42,7 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
   }
 }
 
-.user__image {
+.user__picture {
   position: absolute;
   right: 50%;
   transform: translate(50%, -50%);
@@ -178,7 +184,14 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
     position: relative;
     width: 0%;
     transform: translateX(100%);
+    .no__data {
+      @include svg();
+    }
   }
+  .user__bio > .fill__bio {
+    @include svg();
+  }
+
   .user__experience > .no__experience {
     @include svg();
   }
