--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,11 +32,13 @@
     <nav>
       <ul>
         <%if current_user%>
-          <li class="<%=current_path(bid_history_projects_path) ? "add__border-bottom" : ""%>">
-            <%=link_to  bid_history_projects_path  do%>
-              <i class="fad fa-history"></i>
-            <%end%>
-          </li>
+          <% if user_freelancer?(current_user) %>
+            <li>
+              <%=link_to  bid_history_projects_path  do%>
+                <i class="fad fa-history"></i>
+              <%end%>
+            </li>
+          <% end %>
           <li class="conversations__dropdown">
             <%=link_to  conversations_path ,remote: true do%>
               <i class="fad fa-envelope"></i>
