--- a/app/views/profiles/_user_profile.html.erb
+++ b/app/views/profiles/_user_profile.html.erb
@@ -1,4 +1,4 @@
-<div class="user__image">
+<div class="user__picture">
   <%=inline_svg_tag 'default_avatar.svg'%>
 </div>
 <ul class="user__profile">
@@ -10,9 +10,9 @@
   </li>
   <li>
     <ul class="details__tab">
-      <li class="about__me-tab"><%=link_to 'about' , freelancer_about_me_path,remote: true%></li>
-      <li class="user__experience-tab"><%=link_to 'experience' , freelancer_experience_path,remote: true%></li>
-      <li class="user__details-tab"><%=link_to 'details' , freelancer_details_path,remote: true%></li>
+      <li class="about__me-tab"><%=link_to 'about' ,  freelancer_about_me_path(user),remote: true%></li>
+      <li class="user__experience-tab"><%=link_to 'experience' , current_user.try(:role) =="client" ? client_experience_path(user) : freelancer_experience_path(user),remote: true%></li>
+      <li class="user__details-tab"><%=link_to 'details' , freelancer_details_path(user),remote: true%></li>
     </ul>
   </li>
   <li class="welcome">
