--- a/app/views/profiles/details.js.erb
+++ b/app/views/profiles/details.js.erb
@@ -1,17 +1,16 @@
 if (document.querySelector(".user__bio"))
-  document.querySelector(".user__bio").remove();
+document.querySelector(".user__bio").remove();
 if (document.querySelector(".user__experience"))
-  document.querySelector(".user__experience").remove();
+document.querySelector(".user__experience").remove();
 if (document.querySelector(".user__details"))
-  document.querySelector(".user__details").remove();
+document.querySelector(".user__details").remove();
 currentTab = document.querySelector(".user__details-tab");
 if (document.querySelector(".welcome"))
-  document.querySelector(".welcome").remove();
-
+document.querySelector(".welcome").remove();
 document
-  .querySelector(".user__analytics")
-  .insertAdjacentHTML("beforebegin", `<%=j render 'details' %>`);
+.querySelector(".user__analytics")
+.insertAdjacentHTML("beforebegin", `<%=j render 'details',user: @user %>`);
 t = setTimeout(() => {
-  document.querySelector(".user__details").classList.add("slide__in");
-  clearTimeout(t);
+document.querySelector(".user__details").classList.add("slide__in");
+clearTimeout(t);
 }, 100);
