--- a/app/views/profiles/experience.js.erb
+++ b/app/views/profiles/experience.js.erb
@@ -9,7 +9,7 @@ if (document.querySelector(".welcome"))
 document.querySelector(".welcome").remove();
 document
 .querySelector(".user__analytics")
-.insertAdjacentHTML("beforebegin", `<%=j render 'experience' %>`);
+.insertAdjacentHTML("beforebegin", `<%=j render 'experience',user: @user %>`);
 t=setTimeout(() => {
 document.querySelector(".user__experience").classList.add("slide__in");
 clearTimeout(t);
